feat(signup): complete rework of authorization system
